@@ -44,6 +44,7 @@ bundledoc/arlatex
 bundledoc/bundledoc
 cachepic/cachepic.tlu
 checkcites/checkcites.lua
+chklref/chklref.pl
 cjk-gs-integrate/cjk-gs-integrate.pl
 clojure-pamphlet/pamphletangler
 cluttex/cluttex.lua
